--- a/main.tex
+++ b/main.tex
@@ -1,3 +1,14 @@
+%  #     # #     #    #     #####     #
+%  #     # #  #  #   # #   #     #   # #
+%  #     # #  #  #  #   #  #        #   #
+%  #     # #  #  # #     # #  #### #     #
+%  #     # #  #  # ####### #     # #######
+%  #     # #  #  # #     # #     # #     #
+%   #####   ## ##  #     #  #####  #     #
+%
+% Projekt synchronizowany z moim GitHubem. Przed edycją sprawdzajcie w menu z boku czy nie trzeba zmergeować nowych rzeczy!!!
+
+
 \documentclass{article}
 \usepackage{graphicx} % Required for inserting images
 
@@ -9,6 +20,15 @@
 
 \maketitle
 
-\section{Introduction}
+\section{Wstęp}
+
+Wspólna baza notatek z Fizyki Atomowej.
+KORZYSTAJ MĄDRZE!
+
+\section{Wykład 09.04.2025}
+
+\subsection{Cząstka w polu Elektromagnetycznym}
+
+Rozważamy \textbf{Hamiltonian klasyczny} cząstki z ładunkiem $q$ w pol elektromagnetycznym (dalej EM) $(A, \phi)$:
 
 \end{document}
