write some more content about H

--- a/main.tex
+++ b/main.tex
@@ -25,10 +25,6 @@
 Wspólna baza notatek z Fizyki Atomowej.
 KORZYSTAJ MĄDRZE!
 
-\section{Wykład 09.04.2025}
-
-\subsection{Cząstka w polu Elektromagnetycznym}
-
-Rozważamy \textbf{Hamiltonian klasyczny} cząstki z ładunkiem $q$ w pol elektromagnetycznym (dalej EM) $(A, \phi)$:
+\include{09.04.2025} % @Maciej; Konynuacja przez @Michał
 
 \end{document}
